--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -5,11 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Train model
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
           python train.py  # generate plot.png
 
